# proto-md

./: .gitignore  PLANO_EXECUCAO.md  README.md  cli.py  index.html  mock_generator.py  parser.py  pyproject.toml  sample_ui.html  test_mvp.py  ui_generator.py  validator.py
.github/workflows/: quality-check.yml
protocols/: invalid_protocol.md  user_profile.md  valid_protocol.md
src/intent_compiler/: cli.py  lint_config.py  parser.py  validator.py
src/intent_compiler/generators/: ui_generator.py
src/intent_compiler/templates/: form_base.html.j2
tests/: test_mvp.py
